# multi_room_enviromental_monitoring_system

./: .gitignore  README.md  flash_nicla_sense_me.sh  flash_nicla_sense_me_room1.sh  flash_nicla_sense_me_room2.sh  flash_nicla_sense_me_room3.sh  requirements.txt  run_backend.sh  run_gateway.sh  run_simulation.sh
config/: config_sim.yaml
docs/: architecture.md  commands.md  config.yml  config_sim.yaml  setup.md
gateway/: gateway.py  scan_devices.py
nodes/nicla_firmware/nicla_platformio_project/: multi_room_enviromental_monitoring_system.code-workspace  platformio.ini
nodes/nicla_firmware/nicla_platformio_project/src/: main.cpp
nodes/simulator/: CMakeLists.txt  gateway_sim.cpp  gateway_sim.hpp  gateway_sim.py  main.cpp  sensor_node_sim.cpp  sensor_node_sim.hpp  sensor_sim.cpp
